Make microdata XSS-safe and subevent-aware

--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -8,6 +8,12 @@
 {% block title %}{% trans "Presale" %}{% endblock %}
 
 {% block content %}
+
+    {% autoescape off %}
+        <script type="application/ld+json">
+            {{ ev.event_microdata }}
+        </script>
+    {% endautoescape %}
     {% if show_cart %}
         <div class="panel panel-primary cart">
             <div class="panel-heading">
